cmake_minimum_required(VERSION 2.8)

project(ImageProcessor)

find_package(OpenCV REQUIRED)

add_executable(sampleopencv masterHeaders.cpp)
add_executable(sampleopencv arguments.cpp)
add_executable(sampleopencv rawImage.cpp)
add_executable(sampleopencv grayscaleFilter.cpp)
add_executable(sampleopencv medianFilter.cpp)
add_executable(sampleopencv thresholdFilter.cpp)
add_executable(sampleopencv scaleFilter.cpp)
add_executable(sampleopencv grayHistogram.cpp)
add_executable(sampleopencv grayHistogramEqualization.cpp)
add_executable(sampleopencv histogramStretch.cpp)
add_executable(sampleopencv histogramEqualization.cpp)
add_executable(sampleopencv hsiHistogramEqualization.cpp)
add_executable(sampleopencv sobelEdgeDetection.cpp)
add_executable(sampleopencv openCvCannyEdgeDetection.cpp)
add_executable(sampleopencv openCvGrayHistogramEqualization.cpp)
add_executable(sampleopencv openCvHistogramEqualization.cpp)
add_executable(sampleopencv openCvSobelEdgeDetection.cpp)
add_executable(sampleopencv openCvYCrCbHistogramEqualization.cpp)
add_executable(sampleopencv filterPipe.cpp)
add_executable(sampleopencv program.cpp)

target_link_libraries(ImageProcessor ${OpenCV_LIBS})
