cmake_minimum_required(VERSION 2.8)

project(ImageProcessor)

find_package(OpenCV REQUIRED)

add_executable(ImageProcessor masterHeaders.cpp)
add_executable(ImageProcessor arguments.cpp)
add_executable(ImageProcessor rawImage.cpp)
add_executable(ImageProcessor grayscaleFilter.cpp)
add_executable(ImageProcessor medianFilter.cpp)
add_executable(ImageProcessor thresholdFilter.cpp)
add_executable(ImageProcessor scaleFilter.cpp)
add_executable(ImageProcessor grayHistogram.cpp)
add_executable(ImageProcessor grayHistogramEqualization.cpp)
add_executable(ImageProcessor histogramStretch.cpp)
add_executable(ImageProcessor histogramEqualization.cpp)
add_executable(ImageProcessor hsiHistogramEqualization.cpp)
add_executable(ImageProcessor sobelEdgeDetection.cpp)
add_executable(ImageProcessor openCvCannyEdgeDetection.cpp)
add_executable(ImageProcessor openCvGrayHistogramEqualization.cpp)
add_executable(ImageProcessor openCvHistogramEqualization.cpp)
add_executable(ImageProcessor openCvSobelEdgeDetection.cpp)
add_executable(ImageProcessor openCvYCrCbHistogramEqualization.cpp)
add_executable(ImageProcessor filterPipe.cpp)
add_executable(ImageProcessor program.cpp)

target_link_libraries(ImageProcessor ${OpenCV_LIBS})
